# KOL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 00-executive-overview.md  01-getting-started.md  02-ui-guide.md  03-api-reference.md  04-hardware-integration.md  05-security-privacy.md  06-operations-runbook.md  07-testing-qa.md  08-glossary.md  10-developer-guide.md  20-operations-runbook.md
scripts/: ingest_weather.py  simulate_sensor.py
smart_lighting_ai_dali/: __init__.py  config.py  control_service.py  db.py  feature_engineering.py  logging_config.py  main.py  models.py  openai_client.py  rate_limit.py  retention.py  schemas.py
smart_lighting_ai_dali/dali/: __init__.py  interface.py
smart_lighting_ai_dali/data/examples/: personal.json  sensors.csv  weather.json
smart_lighting_ai_dali/frontend/: index.html
smart_lighting_ai_dali/notebooks/: tuning_workflow.ipynb
smart_lighting_ai_dali/scripts/: export_training_data.py  ingest_weather.py  run_api.py  simulate_sensor.py
smart_lighting_ai_dali/tools/: __init__.py  aggregate_once.py
tests/: conftest.py  test_admin.py  test_admin_endpoints.py  test_ai_controller.py  test_api_predict_control.py  test_control_service.py  test_diagnostics.py  test_ingest_and_features.py  test_logging_config.py  test_simulation_mode.py
